# flint

./: cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_repo_name}}/: Makefile  Pipfile  README.md  pyproject.toml  setup.cfg
{{cookiecutter.project_repo_name}}/docs/source/: conf.py  index.rst
{{cookiecutter.project_repo_name}}/tests/: __init__.py
{{cookiecutter.project_repo_name}}/{{cookiecutter.project_repo_name}}/: {{cookiecutter.project_repo_name}}.py
