[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "{{cookiecutter.project_python_version}}"

[tool.poetry.dev-dependencies]
coverage = "^4.5"
isort = "^4.3"
sphinx = "^1.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
