[tool.poetry]
name = "{{cookiecutter.project_repo_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "{{cookiecutter.project_python_version}}"

[tool.poetry.dev-dependencies]
coverage = "^6.1"
isort = "^5.10"
black = "^21.10b"
sphinx = "^4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
